@@ -3,10 +3,12 @@ DIST rspec-1.1.12.gem 274944 RMD160 e910463e38093f946a9c670d9b52b8c0ce4b132f SHA
 DIST rspec-1.2.0.gem 187904 RMD160 bfa533b644610d0aa28c0f04747684ea68f40ce3 SHA1 c5fa6d06a87fc082ca988688aff45ee61529abe0 SHA256 970b2ffca4283d8d34c914f25dedd6cdb2d9b36d36c4d0f6dd99571ffa5f854a
 DIST rspec-1.2.2.gem 193024 RMD160 5c34544d8bc9116ca718642a46d1666acfbade27 SHA1 658b0721324c64cff0ce7333142c3898ea17e6b5 SHA256 dfc12897fde86184660f5c8680f0913ed8585a0fc588246d5278ff564aef35c5
 DIST rspec-1.2.4.gem 197632 RMD160 c9a6b7c662938265913ade915266b78624c5084d SHA1 81cf367296694aa289bf4138612e0a05e566de66 SHA256 e32d86999993479e785710213737d1b2ee2b7e8ab195a474939f444b581ae2cf
+DIST rspec-1.2.6.gem 200192 RMD160 9f59d54b00b90eca72414a23d1b13351ec63b2e4 SHA1 db7da2420fd155cf1367853a0d171a8d820b2179 SHA256 d0d4f1391b5e39408dd92b16e03998da2e36f44884f0ee37807d2a7c71e6d511
 EBUILD rspec-1.1.11.ebuild 474 RMD160 5ca03f205f68cd7a8ad0bcd0425eace29ab2a14f SHA1 96b59b3f28198e164fc01632b17684f0357dc431 SHA256 a26b3a9a50955f8937c86dd60bfdfe9a50400449e9b204fd3da371ab8a5d5fba
 EBUILD rspec-1.1.12.ebuild 479 RMD160 af088f6401212a7cfb06cb8db71d6e123aad991d SHA1 920ef213245b899ab79a582fc7413fb657a5bf84 SHA256 acf98719445ad7001c83ca2d5c3d3649cb6b6fd5ee876e5d45f378ea9cd8d93e
 EBUILD rspec-1.2.0.ebuild 478 RMD160 35b3b7f8e9ce82ef2fa4ffcca22ca9cd45277b93 SHA1 13d2777e6b9f76aeb472c76fa3eb4099ede11b10 SHA256 da2b58cff8287203da67526ea26f0cec50a9ba8e657465c6c9524a28b507458e
 EBUILD rspec-1.2.2.ebuild 497 RMD160 ea11a014a6b36e08a62844ded61536ca156e6085 SHA1 4c66706f1dd64c0d85c75e14fc2437202e15c1b6 SHA256 dbe5bfa075e2bb58f272287905d36b1bc78390a76c9a9617a7cd344d940b4f20
 EBUILD rspec-1.2.4.ebuild 507 RMD160 947363028a8c64b62dd1082368afb79a967bcfd5 SHA1 fee7f670422b738475dccc0e560fbaf922cd5abc SHA256 1e5ff8fa4e43aa38a038b2287a78a67b850875dc7ddcf2746f787b7a2c873d85
-MISC ChangeLog 6262 RMD160 d5b12d2edc7af6552b38c1bfc4940d526d9d5129 SHA1 48409f74f456b1109f629455d37a15bea67a7cd2 SHA256 d08c46c589ae7ea6f8706a3af5b8b26a3440f5810105018eee639f269ebc5363
+EBUILD rspec-1.2.6.ebuild 504 RMD160 f7a0879545ab3ca33eb490069621cfc0017c06a8 SHA1 6353ae51ba32925a9e6fe6e86a73da2784303797 SHA256 49190ff7d6c4222d18a236e91c1ddd87d531f7a1909989173d8fabcc2d61ecdf
+MISC ChangeLog 6421 RMD160 79ae2e9d077171515f08547f4930adfdf5161e61 SHA1 393506660c70550974f0cf9d4228d086fee429f7 SHA256 374eaaf7c971097f87b10ac9872f48d189707cb59c0999d6bbee1b8ddffd68ed
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
